# pcmd

./: .gitignore  404.html  README.md  cmdpack.bash  cmdsetup.py  index.html  libsetup.py  main.py  mkdocs.yml  packlib.bash  pyproject.toml  requirements.txt  setup.py
.github/workflows/: gen_web.yml
apps/padb/: cmdsetup.py  pyproject.toml
apps/padb/src/: main.py
apps/padb/src/cmds/: __init__.py  device_info.py  log_info.py  temple_code.py
cmd_fwk/: README.md  libpack.bash  libsetup.py  pyproject.toml
cmd_fwk/src/fwk/: __init__.py  compat.py
cmds/: device_info.py  log_info.py  temple_code.py
cmds/ext/: api.py
docs/: fastp.md
fastp/: index.html  libpack.bash  libsetup.py  pyproject.toml
fastp/src/fastp/: __init__.py  compat.py  event.py
fwk/: __init__.py  adber.py  compat.py  event.py  screen_monitor.py
padb/: index.html
pyadb/: __init__.py  adb_cmd.py  adb_status.py  airplane.py  api.py  apk.py  compat.py  device.py  event.py  log.py  random_device.py  screen_monitor.py  utils.py
pyadb/cmd/: __init__.py  device_info.py  log_info.py  temple_code.py
search/: search_index.json
src/: README.md
src/cmds/: __init__.py  log_info.py  temple_code.py
