[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = false
secondary = false

[tool.poetry]
name = "padb"
version = "1.2.0"
description = "padb tools"
authors = ["electrolyteJ <hawks.jamesf@gmail.com>"]
license = "Apache2"
readme = "README.md"
packages = [{ include = "cmds" , from ="src"}]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
cmd_fwk = {path="cmd_fwk", develop=true}

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.1.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[tool.poetry.scripts]
padb = 'cmds:entry'
