[tool.poetry]
name = "fastp"
version = "1.2.0"
description = "padb tools"
authors = ["electrolyteJ <hawks.jamesf@gmail.com>"]
license = "Apache2"
readme = "README.md"
packages = [{ include = "fastp" , from ="src"}]

[tool.poetry.dependencies]
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

